Update Dockerfile for optimized Composer installation
- Added --no-scripts option during the initial Composer install to prevent running scripts before all application code is copied.
- Included --optimize-autoloader in the second Composer install to enhance performance after the application code is in place.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,21 +8,24 @@ WORKDIR /app
 # Copy only composer files first to leverage Docker layer caching
 COPY composer.json composer.lock* ./
 
+# First install without running composer scripts (no artisan yet)
 RUN composer install \
     --no-dev \
     --no-interaction \
     --no-progress \
+    --no-scripts \
     --prefer-dist
 
-# Copy the rest of the application code
+# Copy the rest of the application code (artisan etc.)
 COPY . .
 
-# Re-run in case new packages were added in copied files (optional but safe)
+# Re-run install so composer scripts can run now that artisan exists
 RUN composer install \
     --no-dev \
     --no-interaction \
     --no-progress \
-    --prefer-dist
+    --prefer-dist \
+    --optimize-autoloader
 
 
 ## Stage 2: Runtime image
