--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -1,5 +1,5 @@
 name: client
-description: "A new Flutter project."
+description: "Loagma_ETM Flutter client."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.14.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,6 +64,15 @@ flutter:
   assets:
     - lib/assets/logo.png
     - lib/assets/logo1.png
+    - lib/assets/appetmicon.png
+
+  # Launcher icon configuration
+flutter_launcher_icons:
+  image_path: "lib/assets/appetmicon.png"
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  min_sdk_android: 21
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
